// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 kXOooJ"
>
  <h1
    class="feature__Title-sc-6swrp6-1 dtcvs"
  >
    Unlimited movies, TV shows, and more.
  </h1>
  <h2
    class="feature__SubTitle-sc-6swrp6-2 hVoHew"
  >
    Watch anywhere. Cancel anytime.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with subtitle 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 kXOooJ"
>
  <h2
    class="feature__SubTitle-sc-6swrp6-2 hVoHew"
  >
    Watch anywhere. Cancel anytime.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with title 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 kXOooJ"
>
  <h1
    class="feature__Title-sc-6swrp6-1 dtcvs"
  >
    Unlimited movies, TV shows, and more.
  </h1>
</div>
`;
